@@ -21,6 +21,7 @@ import com.josdem.vetlog.model.User;
 import com.josdem.vetlog.repository.UserRepository;
 import java.util.Arrays;
 import java.util.Optional;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -39,14 +40,10 @@ public class UserDetailsServiceImpl implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         Optional<User> optional = userRepository.findByUsername(username);
-        if (optional.isPresent()) {
-            User user = optional.get();
-            return new org.springframework.security.core.userdetails.User(
-                    user.getUsername(),
-                    user.getPassword(),
-                    Arrays.asList(new SimpleGrantedAuthority(user.getRole().name())));
-        } else {
-            throw new BusinessException("User not found with username: " + username);
-        }
+        return optional.map(user -> new org.springframework.security.core.userdetails.User(
+                        user.getUsername(),
+                        user.getPassword(),
+                        List.of(new SimpleGrantedAuthority(user.getRole().name()))))
+                .orElseThrow(() -> new BusinessException("User not found with username: " + username));
     }
 }
